# Maghreb-Plugin

./: CMakeLists.txt  LICENSE  README.md  S-Mode.cpp  TEMP.json  TopskyFunctions.h  compile.bat  json.hpp  settings.json
DATA/: version.json
DATA/routes/: GMMN.json
DATA/stars/: GCFV.json  GCLA.json  GCLP.json  GCRR.json  GCTS.json  GCXO.json  GMAD.json  GMFO.json  GMME.json  GMMN.json  GMMX.json  GMTT.json
include/: EuroScopePlugIn.h  IndraApcInterop.h  S-Mode.h  TopskyFunctions.h  curl.h
src/: IndraApcInterop.h  S-Mode.cpp  S-Mode.h  plugin.cpp
src/AIRACChecker/: Version.cpp  Version.h
src/S-Mode/: S-Mode.cpp
src/VersionControl/: Version.cpp  Version.h
stars/: GMAD.json  GMFO.json
